[tool.poetry]
name = "servo-control"
version = "0.1.0"
description = ""
authors = ["Martynas MickeviÄius <self@2m.lt>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^1.5.1"
configargparse = "^1.2.3"
pigpio = "^1.78"
pydantic = "^1.6.1"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-bugbear = "^20.1.4"
black = "^20.8b1"
mypy = "^0.782"
taskipy = "^1.3.0"
yamllint = "^1.25.0"

[tool.poetry.scripts]
main = "servo_control.main:run"

[tool.taskipy.tasks]
lint = "flake8"
yamllint = "yamllint ."
check_types = "mypy"
check_fmt = "black --check ."
fmt = "black ."
check = "task lint && task yamllint && task check_types && task check_fmt"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
